Add reset button

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "ledger",
+    "name": "Ledger",
     "description": "A minimal ledger for small businesses.",
     "slug": "ledger",
     "privacy": "public",
